18、Kubernetes企业级监控与开发/软件/monitor/test/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-myapp
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: zyf.test.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
           name: prometheus-test
           port:
            number: 80
