18、Kubernetes企业级监控与开发/软件/monitor/test/prometheus-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-test
  labels:
    app: prometheus-test
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '80'
    prometheus.io/path: '/check'
    prometheus.io/scheme: 'https'
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: prometheus-test
